fixed Alignment in social links

--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -30,6 +30,7 @@
 .social__links {
   display: flex;
   margin-top: 30px;
+  margin-left: 4px;
   align-items: center;
   column-gap: 1rem;
   color: #808dad !important;
